package com.directi.training.lsp.exercise_refactored;

public interface IDuck {
  public void quack();
  public void swim();
}
